# no-docker-required

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
docs/_build/html/: .buildinfo  notebooks.html  search.html  searchindex.js
docs/_build/jupyter_execute/: markdown-notebooks.ipynb  notebooks.ipynb
no_docker_required/: _config.yml
